components/devfile-sample-code-with-quarkus-likx/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: test-app-167111030
    appstudio.openshift.io/component: devfile-sample-code-with-quarkus-likx
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eldevfile-sample-code-with-quarkus-likx
  namespace: karthik
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-devfile-sample-code-with-quarkus-likx
    weight: null
status: {}
